tests/rosetta/transpiler/FS/distance-and-bearing.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/distance-and-bearing.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Distance-and-bearing' based on the file name 'distance-and-bearing.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/distance-and-bearing.fs(152,29): error FS0001: The type 'float' does not match the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/distance-and-bearing.fs(172,13): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/distance-and-bearing.fs(224,32): error FS0001: The type 'obj' does not support the 'comparison' constraint. For example, it does not support the 'System.IComparable' interface
